<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/share"
        android:layout_width="349dp"
        android:layout_height="49dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/compartilhar"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senha"
        app:layout_constraintVertical_bias="0.722"
        app:layout_constraintWidth_percent=".8" />

    <ImageView
        android:id="@+id/ivLogot"
        android:layout_width="150dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/logoloo" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogot"
        app:layout_constraintVertical_bias="0.021"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/img4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="144dp"
        app:layout_constraintEnd_toEndOf="@+id/img2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/img2"
        app:layout_constraintTop_toBottomOf="@+id/img2"
        app:srcCompat="@drawable/cabide" />

    <ImageView
        android:id="@+id/img3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="144dp"
        app:layout_constraintEnd_toEndOf="@+id/img1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/img1"
        app:layout_constraintTop_toBottomOf="@+id/img1"
        app:srcCompat="@drawable/cabide" />

    <TextView
        android:id="@+id/tvLook3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/look_3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/img3"
        app:layout_constraintEnd_toEndOf="@+id/img3"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="@+id/img3"
        app:layout_constraintTop_toBottomOf="@+id/img1"
        app:layout_constraintVertical_bias="0.752" />

    <TextView
        android:id="@+id/tvLook4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/look_4"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/img4"
        app:layout_constraintEnd_toEndOf="@+id/img4"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/img4"
        app:layout_constraintTop_toBottomOf="@+id/img2"
        app:layout_constraintVertical_bias="0.752" />

    <TextView
        android:id="@+id/tvLook2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/look_2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/img2"
        app:layout_constraintEnd_toEndOf="@+id/img2"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/img2"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.826" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/cabide" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/cabide" />

    <TextView
        android:id="@+id/tvLook1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/look_1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/img1"
        app:layout_constraintEnd_toEndOf="@+id/img1"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/img1"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.826" />


</androidx.constraintlayout.widget.ConstraintLayout>